cilium/03_frontend-to-mysql-ingress.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mysql-from-frontend
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app: mysql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
