cilium/04_frontend-to-mysql-egress.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-mysql
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  egress:
    - toEndpoints:
        - matchLabels:
            app: mysql
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
