cilium/06_prometheus-egress-cluster.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-scraping
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: prometheus
  egress:
    - toEntities:
        - cluster
